# Bibliometric_Analysis

./: README.md  pybliometrics.cfg  pyproject.toml
1. Practical use of AI for Cyber Risk Management in Critical Infrastructures - a review/1 - Bibliometric Analysis/3 - Review references/: Concatenated references dataset.xlsx
2. Decoding CyberSecurity How Terminology Shapes the Field/: Decoding CyberSecurity How Terminology Shapes the Field.docx
2. Decoding CyberSecurity How Terminology Shapes the Field/0. datasets/0. Dataset_processing/: divSample.py  mergeSample.py
2. Decoding CyberSecurity How Terminology Shapes the Field/0. datasets/10. metadata scopus/: Scopus-10-Analyze-Country.csv  Scopus-10-Analyze-Year.csv
2. Decoding CyberSecurity How Terminology Shapes the Field/0. datasets/12. requests_google/: google trends.csv
2. Decoding CyberSecurity How Terminology Shapes the Field/1. Cyber Terminology Analysis/src/: countSample_RIS.py  googleTrendsAnalysis.ipynb  googleTrendsPlot.ipynb
2. Decoding CyberSecurity How Terminology Shapes the Field/2. metadata scopus search/: plot metadata scopus.ipynb
2. Decoding CyberSecurity How Terminology Shapes the Field/3. Vos analysis/: thesaurus_keywords.txt
2. Decoding CyberSecurity How Terminology Shapes the Field/4. Interconected sys/: interconnectionSys.ipynb
99. utils/1. Scopus parser beta/: pybliometrics.cfg  testCall.py
Practical use of AI for Cyber Risk Management in Critical Infrastructures - a review/: Similarity_of_dataset.py  thesaurus_keywords.txt
(+32 files in other folders)
