[tool.poetry]
name = "bibliometric-analysis"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Jean Bertholat <jean.bertholat@alten.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pybliometrics = "^4.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
